Some fixes of scrollbar and adaptive

--- a/src/styles/components/menu.css
+++ b/src/styles/components/menu.css
@@ -1,10 +1,11 @@
 .menu {
-  padding: 25px 20px 0;
+  padding: 25px 20px 41vh;
   box-sizing: border-box;
   height: 100vh;
   background-color: var(--main-accent);
   font-weight: 700;
   text-transform: uppercase;
+  overflow: auto;
 }
 
 .menu__content {
@@ -13,14 +14,19 @@
   justify-content: space-between;
   position: relative;
   padding: 0;
-  padding-right: 16px;
 }
 
 .menu__top {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 103px;
+  margin-bottom: calc(100vw / 3);
+  position: sticky;
+  top: 0;
+}
+
+.menu__top--aside {
+  position: relative;
 }
 
 .menu__logo {
@@ -97,14 +103,14 @@
 @media (min-width: 744px) {
   .menu {
     box-sizing: border-box;
-    padding: 43px 72px;
+    padding: 43px 72px 100vh;
     background-color: var(--main-accent);
     font-weight: 700;
     text-transform: uppercase;
   }
 
   .menu__top {
-    margin-bottom: 123px;
+    margin-bottom: calc(100vw / 4.5);
   }
 
   .menu__logo {
@@ -115,11 +121,11 @@
 
 @media (min-width: 1260px) {
   .menu {
-    padding: 50px 120px 482px;
+    padding: 50px 120px 100vh;
   }
 
   .menu__top {
-    margin-bottom: 99px;
+    margin-bottom: calc(100vw / 13);
   }
 
   .menu__nav {
